fixed comment area spacing

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -221,6 +221,7 @@ article.hentry{
 #comments,
 #respond{
   border-top: 1px solid #473924;
+  margin-top: 20px;
 }
 
 
